# machinelearning2

./: .gitignore  README.md
ml2_clases/: .gitignore
ml2_clases/unidad1_practica/: practica.md
ml2_clases/unidad2_practica/: practica.md
ml2_clases/unidad2_sesion1/: ejercicios.md
ml2_clases/unidad2_sesion2/: ejercicios.md  sesion2_tecnicas_avanzadas_chatgpt.md
ml2_clases/unidad3_practica/: Diego_keess_Practica.ipynb  practica.md
ml2_clases/unidad3_sesion1/: ejercicios.md  sesion1_arquitectura_transformers.md
ml2_clases/unidad3_sesion2/: ejercicios.md  sesion2_acceso_programatico_llms.md
ml2_clases/unidad4_practica/: Mi agente Q&A extra (1).json  practica.md  pruebas.md
ml2_clases/unidad4_sesion1/: ejercicios.md  sesion1_agentes_ia_fundamentos_n8n.md
ml2_clases/unidad4_sesion2/: ejercicios.md  sesion2_agentes_avanzados_n8n.md
ml2_clases/unidad5_practica/: .env.example  asistente.py  documentacion.md  guia_puesta_en_marcha.md  ingesta.py  interaccion_humana.md  interfaz_web.py  requirements.txt
ml2_clases/unidad5_sesion1/: ejercicios.md  sesion1_fundamentos_rag_embeddings_vectores.md
ml2_clases/unidad5_sesion2/: ejercicios.md  teoria.md
ml2_clases/unidad6_practica/: practica.md
ml2_clases/unidad6_practica/gmail-mcp-server/: .gitignore  GUIA_REPLICACION.md  auth.py  documentacion.md  gmail_mcp_server.py  pyproject.toml  requirements.txt
ml2_clases/unidad6_sesion1/: ejercicios.md  sesion1_introduccion_mcp_servidores.md
ml2_clases/unidad6_sesion2/: ejercicios.md  sesion2_desarrollo_servidores_mcp_produccion.md
(+26 files in other folders)
